	Fixed: Unable to handle i-MSCP services (start/restart/stop...) on systems using systemd (e.g Jessie)
	Fixed: Wrong labels ( iMSCP::Dialog )
	Removed: Option allowing to add IP manually ( Tedious and error prone )

TICKETS
	Fixed #1172: Bug - Subdomains - DNS resource records - Conflicts with CNAME records

------------------------------------------------------------------------------------------------------------------------
1.1.15
------------------------------------------------------------------------------------------------------------------------

2014-10-29: Laurent Declercq
	RELEASE i-MSCP 1.1.15

CONFIGS
	Added: cram-md5 authentication mechanism (Dovecot)
	Added: PLUGINS_DIR configuration parameter in imscp.conf file
	Changed: Lowered log level for TLS (Postfix)
	Fixed: Apache user (www-data) must not be able to access to the entire file system (security)
	Fixed: Symlinks must be followed by Apache only if the owner match with the target owner (security)
	Fixed: SSLv2 and SSLv3 must be disabled to prevent POODLE attacks ( Dovecot )
	Fixed: Virtual mail directory must not be hardcoded in dovecot configuration file

ENGINE
	Added: Support for alternative cron files ( Servers::cron::cron )
	Changed: Ignore errors regarding the move of home directory ( Modules::User )
	Fixed: main::run: Argument "yes" isn't numeric in addition (+) at /var/www/imscp/engine/imscp-sw-mngr line 111
	Fixed: Wrong IP added in DNS zone files when the BASE_SERVER_IP and BASE_SERVER_PUBLIC_IP parameters are referring
		   to the same IP (private IP)

GUI
	Added: l10n_addTranslations() core function to allow plugins to add their translations
	Added: New parameter in the translate_dmn_status() core function which allow to disable escaping
	Added: Support for plural translations
	Changed: Translation is now processed using Zend_Translate (which is thread-safe) and Zend_Cache
	Fixed: Depending on event manager in use, some listeners will never be triggered (Events aggregator)